# cython-chess

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_usages.py  main.py  pyproject.toml  setup.py  untitled2.py
cython_chess/: __init__.py  cython_chess.pyx  cython_chess_backend.cpp  cython_chess_backend.h
cython_chess.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: cython_chess.cpp  cython_chess.pyx  cython_chess_backend.cpp  cython_chess_backend.h
